--- a/TradeProAssistant.Data/App.config
+++ b/TradeProAssistant.Data/App.config
@@ -2,9 +2,7 @@
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework"
-          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-          requirePermission="false"/>
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
   <connectionStrings>
     <!--<add name="TradeProAssistant" connectionString="Data Source=tradeproassistant.c6hy8gdblg15.us-west-2.rds.amazonaws.com,1433;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=TpaAdmin;Password=7w7oX4!ZC5;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
@@ -13,7 +11,15 @@
   </connectionStrings>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="HtmlAgilityPack" publicKeyToken="bd319b19eaf3b43a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.1.0" newVersion="1.5.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
