--- a/TradeProAssistant/Views/Web.config
+++ b/TradeProAssistant/Views/Web.config
@@ -25,6 +25,8 @@
         <add namespace="Enums"/>
         <add namespace="Kendo.Mvc.UI" />
         <add namespace="Data.Framework"/>
+        <add namespace="TradeProAssistant.Utilities"/>
+        <add namespace="Newtonsoft.Json"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
