--- a/TradeProAssistant.Data/App.config
+++ b/TradeProAssistant.Data/App.config
@@ -6,8 +6,8 @@
     </configSections>
   <connectionStrings>
     <!--<add name="TradeProAssistant" connectionString="Data Source=tradeproassistant.c6hy8gdblg15.us-west-2.rds.amazonaws.com,1433;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=TpaAdmin;Password=7w7oX4!ZC5;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-    <add name="TradeProAssistant" connectionString="Data Source=localhost\MASTER;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <add name="HangfireDb" connectionString="Data Source=localhost\MASTER;Initial Catalog=HangfireDb;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="TradeProAssistant" connectionString="Data Source=10.16.1.141\MASTER;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="HangfireDb" connectionString="Data Source=10.16.1.141\MASTER;Initial Catalog=HangfireDb;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
@@ -19,6 +19,14 @@
       <dependentAssembly>
         <assemblyIdentity name="HtmlAgilityPack" publicKeyToken="bd319b19eaf3b43a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.1.0" newVersion="1.5.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
