--- a/TradeProAssistant/packages.config
+++ b/TradeProAssistant/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="9.0.0" targetFramework="net461" />
   <package id="bootstrap" version="4.4.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="Hangfire" version="1.7.8" targetFramework="net461" />
   <package id="Hangfire.Core" version="1.7.8" targetFramework="net461" />
   <package id="Hangfire.SqlServer" version="1.7.8" targetFramework="net461" />
@@ -17,12 +18,14 @@
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
+  <package id="Moment.js" version="2.24.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.0" targetFramework="net461" />
